# Bayes_LVR

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  bayeslvr.yaml  bayeslvr_attention.yaml  bayeslvr_gated.yaml  ewma_vol.yaml  extended_action.yaml  garch_vol.yaml
outputs/diagnostics_neurips_revision/: baseline_comparison.csv  baseline_comparison.json  gating_diagnostics.csv  gating_diagnostics.json  gating_points.csv  gating_points.json  leave_one_bayesvol_feature_out.csv  leave_one_bayesvol_feature_out.json  leave_one_bayesvol_feature_out_summary.csv  leave_one_bayesvol_feature_out_summary.json  main_results_with_median_ci.csv  main_results_with_median_ci.json  neurips_revision_report.md  per_run_original_evaluation.csv  per_run_original_evaluation.json  placeholder_scan.csv  placeholder_scan.json  placeholder_status.json  regime_analysis.csv  regime_analysis.json  shuffle_diagnostic.csv  shuffle_diagnostic.json  shuffle_diagnostic_summary.csv  shuffle_diagnostic_summary.json
scripts/: diagnostics_neurips_revision.py  evaluate.py  quick_check.py  run_ablation.py  run_robust_ablation.py  setup_data.py  summarize_ablation.py  train.py
src/: __init__.py
src/baselines/: __init__.py  heuristics.py
src/bayesvol/: __init__.py  cir.py  ekf.py  features.py
src/envs/: uniswap_env.py
src/evaluation/: metrics.py
src/models/: feature_extractors.py
src/trainers/: ppo_trainer.py
src/utils/: config.py  data.py  io.py  numeric.py  seed.py
src/volatility/: __init__.py  features.py
submission/: README.md
